--- a/assets/css/main4.css
+++ b/assets/css/main4.css
@@ -153,10 +153,10 @@
 /* Type */
 
 	body, input, select, textarea {
-		color: #192b36;
+		color: #262829;
 		font-family: "Source Sans Pro", Helvetica, sans-serif;
 		font-size: 14pt;
-		font-weight: 300;
+		font-weight: 350;
 		line-height: 2;
 		letter-spacing: 0.2em;
 		text-transform: uppercase;
@@ -999,6 +999,7 @@
 				padding: 0 0 0 0.85em;
 				border-left: solid 1px rgba(255, 255, 255, 0.5);
 				line-height: 1;
+				font-weight: 350;
 			}
 
 				#footer .copyright li:first-child {
@@ -1019,7 +1020,7 @@
 		-webkit-justify-content: space-between;
 		-ms-justify-content: space-between;
 		justify-content: space-between;
-		background-color: #ffffff;
+		background-color: transparent;
 		border-bottom: solid 1px rgba(160, 160, 160, 0.3);
 		height: 3.5em;
 		left: 0;
