--- a/assets/css/secondary.css
+++ b/assets/css/secondary.css
@@ -13,8 +13,8 @@
 	iframe, h1, h2, h3, h4, h5, h6, p, blockquote,
 	pre, a, abbr, acronym, address, big, cite,
 	code, del, dfn, em, img, ins, kbd, q, s, samp,
-	small, strike, strong, sub, sup, tt, var, b,
-	u, i, center, dl, dt, dd, ol, ul, li, fieldset,
+	small, strike, strong, sub, sup, tt, var,
+	i, center, dl, dt, dd, ol, fieldset,
 	form, label, legend, table, caption, tbody,
 	tfoot, thead, tr, th, td, article, aside,
 	canvas, details, embed, figure, figcaption,
@@ -112,10 +112,10 @@
 	body {
 		height: 100%;
 		background-color: #ffffff;
-		background-image: url("images/overlay.png"), -moz-linear-gradient(180deg, rgba(250, 250, 255, 0.85) 25%, rgba(250, 250, 255, 0.55)), url("../../Gallery/champlain.jpg");
-		background-image: url("images/overlay.png"), -webkit-linear-gradient(180deg, rgba(250, 250, 255, 0.85) 25%, rgba(250, 250, 255, 0.55)), url("../../Gallery/champlain.jpg");
-		background-image: url("images/overlay.png"), -ms-linear-gradient(180deg, rgba(250, 250, 255, 0.85) 25%, rgba(250, 250, 255, 0.55)), url("../../Gallery/champlain.jpg");
-		background-image: url("images/overlay.png"), linear-gradient(180deg, rgba(250, 250, 255, 0.85) 25%, rgba(250, 250, 255, 0.55)), url("../../Gallery/champlain.jpg");
+		background-image: url("images/overlay.png"), -moz-linear-gradient(180deg, rgba(250, 250, 255, 0.85) 0%, rgba(250, 250, 255, 0)), url("../../Gallery/champlain.jpg");
+		background-image: url("images/overlay.png"), -webkit-linear-gradient(180deg, rgba(250, 250, 255, 0.85) 0%, rgba(250, 250, 255, 0)), url("../../Gallery/champlain.jpg");
+		background-image: url("images/overlay.png"), -ms-linear-gradient(180deg, rgba(250, 250, 255, 0.85) 0%, rgba(250, 250, 255, 0)), url("../../Gallery/champlain.jpg");
+		background-image: url("images/overlay.png"), linear-gradient(180deg, rgba(250, 250, 255, 0.85) 0%, rgba(250, 250, 255, 0)), url("../../Gallery/champlain.jpg");
 		background-repeat: repeat,			no-repeat,			no-repeat;
 		background-size: 100px 100px, cover,				cover;
 		background-position: top left,		center center,		bottom center;
@@ -207,11 +207,13 @@
 	}
 
 	p {
-		margin: 0 0 1.5em 0;
+		margin: 0 0 1 0;
+		color: #252525;
+		font-size: 1.25em;
 	}
 
 	h1, h2, h3, h4, h5, h6 {
-		color: #313f47;
+		color: #252525;
 		line-height: 1.5;
 		margin: 0 0 0.75em 0;
 	}
@@ -225,18 +227,28 @@
 		font-size: 1.85em;
 		letter-spacing: 0.22em;
 		margin: 0 0 0.525em 0;
+		text-transform: uppercase;
+		font-weight: bolder;
+		width: 100%;
 	}
 
 	h2 {
 		font-size: 1.25em;
+		font-weight: bold;
+		width: 100%;
 	}
 
 	h3 {
-		font-size: 1em;
+		font-size: 1.25em;
+		align: left;
+		font-weight: bold;
+		width: 100%;
 	}
 
 	h4 {
-		font-size: 1em;
+		font-size: 1.25em;
+		align: left;
+		width: 100%;
 	}
 
 	h5 {
@@ -244,7 +256,8 @@
 	}
 
 	h6 {
-		font-size: 1em;
+		font-size: 1.25em;
+		color: #ffffff;
 	}
 
 	@media screen and (max-width: 480px) {
@@ -914,16 +927,22 @@
 		-webkit-transition: opacity 1s ease, -webkit-transform 1s ease;
 		-ms-transition: opacity 1s ease, -ms-transform 1s ease;
 		transition: opacity 1s ease, transform 1s ease;
-		padding: 4.5em 3em 3em 3em ;
+		padding: 4.5em 10em 3em 10em;
 		background: transparent;
 		border-radius: 0;
 		cursor: default;
 		max-width: 100%;
-		opacity: 0.95;
-		position: relative;
-		text-align: center;
-		width: 27em;
+		opacity: 1;
+		position: center;
+		text-align: left;
+		width: 100%;
 	}
+
+		#main a {
+			color: inherit;
+			text-decoration: none;
+		}
+
 
 		#main .avatar {
 			position: relative;
@@ -980,10 +999,14 @@
 		-ms-align-self: -ms-flex-end;
 		align-self: flex-end;
 		width: 100%;
-		padding: 1.5em 0 0 0;
-		color: rgba(255, 255, 255, 0.75);
+		height: 3.5em;
+		line-height: 3.5em;
+		padding: 0 0 0 0;
+		color: transparent;
 		cursor: default;
 		text-align: center;
+		position: fixed;
+		bottom: 0;
 	}
 
 		#footer .copyright {
@@ -1020,7 +1043,7 @@
 		-webkit-justify-content: space-between;
 		-ms-justify-content: space-between;
 		justify-content: space-between;
-		background-color: transparent;
+		background-color: #eceef4;
 		border-bottom: solid 1px rgba(160, 160, 160, 0.3);
 		height: 3.5em;
 		left: 0;
@@ -1050,7 +1073,7 @@
 		#header h1 {
 			height: inherit;
 			line-height: inherit;
-			padding: 0 0 0 1.5em;
+			padding: 0 0 0 0;
 			white-space: nowrap;
 		}
 
@@ -1159,7 +1182,7 @@
 				display: inline-block;
 				height: 2.5em;
 				position: relative;
-				top: -2px;
+				top: 0;
 				vertical-align: middle;
 			}
 
