--- a/assets/css/main4.css
+++ b/assets/css/main4.css
@@ -18,7 +18,7 @@
 	form, label, legend, table, caption, tbody,
 	tfoot, thead, tr, th, td, article, aside,
 	canvas, details, embed, figure, figcaption,
-	footer, header, hgroup, menu, nav, output, ruby,
+	footer, header, hgroup, menu, output, ruby,
 	section, summary, time, mark, audio, video {
 		margin: 0;
 		padding: 0;
