--- a/assets/css/main4.css
+++ b/assets/css/main4.css
@@ -111,15 +111,9 @@
 
 	body {
 		height: 100%;
-		background-color: #ffffff;
-		background-image: url("images/overlay.png"), -moz-linear-gradient(180deg, rgba(250, 250, 255, 0.05) 25%, rgba(250, 250, 255, 0.55)), url("../../Gallery/champlain.jpg");
-		background-image: url("images/overlay.png"), -webkit-linear-gradient(180deg, rgba(250, 250, 255, 0.05) 25%, rgba(250, 250, 255, 0.55)), url("../../Gallery/champlain.jpg");
-		background-image: url("images/overlay.png"), -ms-linear-gradient(180deg, rgba(250, 250, 255, 0.05) 25%, rgba(250, 250, 255, 0.55)), url("../../Gallery/champlain.jpg");
-		background-image: url("images/overlay.png"), linear-gradient(180deg, rgba(250, 250, 255, 0.05) 25%, rgba(250, 250, 255, 0.55)), url("../../Gallery/champlain.jpg");
-		background-repeat: repeat,			no-repeat,			no-repeat;
-		background-size: 100px 100px, cover,				cover;
-		background-position: top left,		center center,		bottom center;
-		background-attachment: fixed,			fixed,				fixed;
+		width: 100%;
+		background-image: url("../../Gallery/champlain.jpg");
+		background-size: 100% 100%;	
 	}
 
 		body:after {
@@ -212,9 +206,9 @@
 	}
 
 	h1, h2, h3, h4, h5, h6 {
-		color: #000000;
+		color: #252525;
 		line-height: 1.5;
-		margin: 0 0 0 0;
+		margin: 0 0 0.75em 0;
 	}
 
 		h1 a, h2 a, h3 a, h4 a, h5 a, h6 a {
@@ -223,22 +217,37 @@
 		}
 
 	h1 {
-		font-size: 3em;
+		font-size: 2.5em;
+		text-align: center;
+		vertical-align: center;
+		text-transform: none;
+		font-weight: bolder;
+		font-family: Arial;
+		width: 100%;
 	}
 
 	h2 {
-		font-size: 1.5em;
+		font-size: 2em;
+		font-weight: bold;
 		text-transform: none;
+		width: 100%;
+		color: #424c54;
 	}
 
 	h3 {
-		font-size: 1em;
-		text-transform: none;
+		font-size: 1.85em;
+		text-align: center;
+		vertical-align: center;
+		text-transform: uppercase;
+		font-weight: bolder;
+		font-family: Arial;
+		width: 100%;
 	}
 
 	h4 {
-		font-size: 1.85em;
-		padding-left: 1.5%;
+		font-size: 1em;
+		align: left;
+		width: 100%;
 	}
 
 	h5 {
@@ -246,9 +255,11 @@
 	}
 
 	h6 {
-		font-size: 1em;
+		font-size: 1.25em;
+		text-transform: none;
+		color: #ffffff;
 	}
-
+	
 	@media screen and (max-width: 480px) {
 
 		h1 {
@@ -528,22 +539,9 @@
 
 	.icon {
 		text-decoration: none;
-		position: fixed;
 		border-bottom: none;
 	}
 
-		.icon:before {
-			-moz-osx-font-smoothing: grayscale;
-			-webkit-font-smoothing: antialiased;
-			display: inline-block;
-			font-style: normal;
-			font-variant: normal;
-			text-rendering: auto;
-			line-height: 1;
-			text-transform: none !important;
-			font-family: 'Font Awesome 5 Free';
-			font-weight: 400;
-		}
 
 		.icon > .label {
 			display: none;
@@ -824,13 +822,15 @@
 		-ms-transition: background-color 0.2s ease-in-out, border-color 0.2s ease-in-out, color 0.2s ease-in-out;
 		transition: background-color 0.2s ease-in-out, border-color 0.2s ease-in-out, color 0.2s ease-in-out;
 		display: inline-block;
-		height: 3.75em;
-		line-height: 3.75em;
-		padding: 0 1.5em;
+		font-size: 150%;
+		height: 1.5em;
+		width: 1.5em;
+		line-height: 1.5em;
+		margin-top: 0.5em;
 		background-color: transparent;
-		border-radius: 4px;
+		border-radius: 100%;
 		border: solid 1px #c8cccf;
-		color: #414f57 !important;
+		color: #414f57;
 		cursor: pointer;
 		text-align: center;
 		text-decoration: none;
@@ -915,7 +915,6 @@
 		-webkit-transition: opacity 1s ease, -webkit-transform 1s ease;
 		-ms-transition: opacity 1s ease, -ms-transform 1s ease;
 		transition: opacity 1s ease, transform 1s ease;
-		padding-top: 2.5%;
 		background: transparent;
 		border-radius: 0;
 		cursor: default;
@@ -924,13 +923,14 @@
 		position: fixed;
 		text-align: center;
 		width: 100%;
+		padding-top: 5em;
 		margin: auto;
 	}
 
 		#main .avatar {
 			position: relative;
 			display: block;
-			margin-bottom: 0em;
+			margin-top: 0.5em;
 		}
 
 			#main .avatar img {
@@ -941,38 +941,6 @@
 				
 			}
 
-			#main .avatar:before {
-				display: block;
-				position: absolute;
-				top: 50%;
-				left: -3em;
-				width: calc(100% + 6em);
-				height: 1px;
-				z-index: -1;
-				background: #c8cccf;
-			}
-
-		@media screen and (max-width: 480px) {
-
-			#main {
-				padding: 4em 2em 2.5em 2em ;
-				width: 100%;
-			}
-
-				#main .avatar:before {
-					left: -2em;
-					width: calc(100% + 4em);
-				}
-
-		}
-
-		body.is-preload #main {
-			-moz-transform: rotateX(15deg);
-			-webkit-transform: rotateX(15deg);
-			-ms-transform: rotateX(15deg);
-			transform: rotateX(15deg);
-			opacity: 0;
-		}
 
 /* Footer */
 
@@ -987,6 +955,7 @@
 		text-align: center;
 		bottom: 0;
 		position: fixed;
+		padding-bottom: 0.25em;
 	}
 
 		#footer .copyright {
@@ -1013,22 +982,14 @@
 	}
 
 	#header {
-		display: -moz-flex;
-		display: -webkit-flex;
-		display: -ms-flex;
-		display: flex;
-		-moz-justify-content: space-between;
-		-webkit-justify-content: space-between;
-		-ms-justify-content: space-between;
 		justify-content: space-between;
 		background-color: transparent;
 		border-bottom: solid 1px rgba(160, 160, 160, 0.3);
-		height: 3.5em;
-		left: 0;
-		line-height: 3.5em;
-		top: 0;
 		width: 100%;
+		height: 4em;
+		line-height: 4em;
 		z-index: 10000;
+		position: fixed;
 	}
 
 		#header a {
@@ -1050,7 +1011,6 @@
 		#header h1 {
 			height: inherit;
 			line-height: inherit;
-			padding: 0 0 0 1.5em;
 			white-space: nowrap;
 		}
 
