updates to media screen size

--- a/assets/css/gallery.css
+++ b/assets/css/gallery.css
@@ -78,7 +78,7 @@
 
 /* Basic */
 
-	@media screen and (max-width: 480px) {
+	@media screen and (max-width: 768px) {
 
 		html, body {
 			min-width: 320px;
@@ -132,7 +132,7 @@
 
 		}
 
-		@media screen and (max-width: 480px) {
+		@media screen and (max-width: 768px) {
 
 			body, input, select, textarea {
 				font-size: 10pt;
@@ -188,9 +188,10 @@
 
 	h1 {
 		font-size: 1.85em;
-		letter-spacing: 0.22em;
 		margin: 0 0 0.525em 0;
+		text-transform: uppercase;
 		font-weight: bolder;
+		font-family: Arial;
 		width: 100%;
 	}
 
@@ -222,10 +223,48 @@
 		color: #ffffff;
 	}
 
-	@media screen and (max-width: 480px) {
+	@media screen and (max-width: 768px) {
 
 		h1 {
-			font-size: 1.65em;
+			font-size: 1em;
+			text-align: center;
+			vertical-align: center;
+			text-transform: uppercase;
+			font-weight: bolder;
+			font-family: Arial;
+			width: 100%;
+		}
+
+		h2 {
+			font-size: 0.75em;
+			align: left;
+			width: 100%;
+		}
+
+		h3 {
+			font-size: 1em;
+			text-align: center;
+			vertical-align: center;
+			text-transform: uppercase;
+			font-weight: bolder;
+			font-family: Arial;
+			width: 100%;
+		}
+		
+		h4 {
+			font-size: 0.75em;
+			align: left;
+			width: 100%;
+		}
+		
+		h5 {
+			font-size: 1em;
+		}
+		
+		h6 {
+			font-size: 0.75em;
+			text-transform: none;
+			color: #ffffff;
 		}
 
 	}
@@ -306,7 +345,7 @@
 				background: #c8cccf;
 			}
 
-		@media screen and (max-width: 480px) {
+		@media screen and (max-width: 768px) {
 
 			#main {
 				padding: 4em 2em 2.5em 2em ;
@@ -544,15 +583,7 @@
 				padding: 0 0.5em 0 0;
 			}
 
-		@media screen and (max-width: 980px) {
-
-			#header .links {
-				display: none;
-			}
-
-		}
-
-		@media screen and (max-width: 736px) {
+		@media screen and (max-width: 768px) {
 
 			#header {
 				height: 2.75em;
@@ -561,10 +592,6 @@
 
 				#header h1 {
 					padding: 0 0 0 1em;
-				}
-
-				#header .main .search {
-					display: none;
 				}
 
 		}
