--- a/assets/css/main4.css
+++ b/assets/css/main4.css
@@ -264,6 +264,46 @@
 
 		h1 {
 			font-size: 1.65em;
+			text-align: center;
+			vertical-align: center;
+			text-transform: none;
+			font-weight: bolder;
+			font-family: Arial;
+			width: 100%;
+		}
+
+		h2 {
+			font-size: 1.25em;
+			font-weight: bold;
+			text-transform: none;
+			width: 100%;
+			color: #424c54;
+		}
+
+		h3 {
+			font-size: 1em;
+			text-align: center;
+			vertical-align: center;
+			text-transform: uppercase;
+			font-weight: bolder;
+			font-family: Arial;
+			width: 100%;
+		}
+		
+		h4 {
+			font-size: 0.75em;
+			align: left;
+			width: 100%;
+		}
+		
+		h5 {
+			font-size: 1em;
+		}
+		
+		h6 {
+			font-size: 0.75em;
+			text-transform: none;
+			color: #ffffff;
 		}
 
 	}
@@ -948,7 +988,9 @@
 
 			#main {
 				padding: 4em 2em 2.5em 2em ;
-				width: 100%;
+				height: 60%;
+				width: 60%;
+				margin-left: 20%;
 			}
 
 				#main .avatar:before {
