--- a/assets/css/secondary.css
+++ b/assets/css/secondary.css
@@ -78,7 +78,7 @@
 
 /* Basic */
 
-	@media screen and (max-width: 480px) {
+	@media screen and (max-width: 768px) {
 
 		html, body {
 			min-width: 320px;
@@ -142,7 +142,7 @@
 
 		}
 
-		@media screen and (max-width: 480px) {
+		@media screen and (max-width: 768px) {
 
 			body, input, select, textarea {
 				font-size: 10pt;
@@ -197,33 +197,38 @@
 		}
 
 	h1 {
-		font-size: 1.85em;
-		letter-spacing: 0.22em;
-		margin: 0 0 0.525em 0;
-		text-transform: uppercase;
+		font-size: 2.5em;
+		text-align: center;
+		vertical-align: center;
+		text-transform: none;
 		font-weight: bolder;
+		font-family: Arial;
 		width: 100%;
 	}
 
 	h2 {
-		font-size: 1.25em;
+		font-size: 2em;
 		font-weight: bold;
+		text-transform: none;
 		width: 100%;
+		color: #424c54;
 	}
 
 	h3 {
-		font-size: 1.25em;
-		align: left;
-		font-weight: bold;
+		font-size: 1.85em;
+		text-align: center;
+		vertical-align: center;
+		text-transform: uppercase;
+		font-weight: bolder;
+		font-family: Arial;
 		width: 100%;
 	}
 
 	h4 {
-		font-size: 1.25em;
+		font-size: 1em;
 		align: left;
 		width: 100%;
 	}
-
 	h5 {
 		font-size: 1em;
 	}
@@ -233,11 +238,58 @@
 		color: #ffffff;
 	}
 
-	@media screen and (max-width: 480px) {
+	@media screen and (max-width: 768px) {
 
 		h1 {
 			font-size: 1.65em;
+			text-align: center;
+			vertical-align: center;
+			text-transform: none;
+			font-weight: bolder;
+			font-family: Arial;
+			width: 100%;
 		}
+
+		h2 {
+			font-size: 1.25em;
+			font-weight: bold;
+			text-transform: none;
+			width: 100%;
+			color: #424c54;
+		}
+
+		h3 {
+			font-size: 1em;
+			text-align: center;
+			vertical-align: center;
+			text-transform: uppercase;
+			font-weight: bolder;
+			font-family: Arial;
+			width: 100%;
+		}
+		
+		h4 {
+			font-size: 0.75em;
+			align: left;
+			width: 100%;
+		}
+		
+		h5 {
+			font-size: 1em;
+		}
+		
+		h6 {
+			font-size: 0.75em;
+			text-transform: none;
+			color: #ffffff;
+		}
+		
+		p {
+			margin: 0 0 1 0;
+			color: #252525;
+			font-size: 0.75em;
+		}
+
 
 	}
 
@@ -307,7 +359,7 @@
 					width: calc(25% - 0.28125em);
 				}
 
-		@media screen and (max-width: 480px) {
+		@media screen and (max-width: 768px) {
 
 			form > .fields {
 				width: calc(100% + 2.25em);
@@ -666,7 +718,7 @@
 				width: 100%;
 			}
 
-		@media screen and (max-width: 480px) {
+		@media screen and (max-width: 768px) {
 
 			ul.actions:not(.fixed) {
 				-moz-flex-direction: column;
@@ -785,7 +837,7 @@
 					border-color: #ff7496;
 				}
 
-		@media screen and (max-width: 480px) {
+		@media screen and (max-width: 768px) {
 
 			ul.icons li a:before {
 				font-size: 1.5rem;
@@ -942,7 +994,7 @@
 				background: #c8cccf;
 			}
 
-		@media screen and (max-width: 480px) {
+		@media screen and (max-width: 768px) {
 
 			#main {
 				padding: 4em 2em 2.5em 2em ;
@@ -1180,15 +1232,8 @@
 				padding: 0 0.5em 0 0;
 			}
 
-		@media screen and (max-width: 980px) {
-
-			#header .links {
-				display: none;
-			}
-
-		}
-
-		@media screen and (max-width: 736px) {
+	
+		@media screen and (max-width: 768px) {
 
 			#header {
 				height: 2.75em;
@@ -1197,10 +1242,6 @@
 
 				#header h1 {
 					padding: 0 0 0 1em;
-				}
-
-				#header .main .search {
-					display: none;
 				}
 
 		}
