--- a/assets/css/gallery.css
+++ b/assets/css/gallery.css
@@ -189,7 +189,7 @@
 	h1 {
 		font-size: 1.85em;
 		margin: 0 0 0.525em 0;
-		text-transform: uppercase;
+		text-transform: none;
 		font-weight: bolder;
 		font-family: Arial;
 		width: 100%;
@@ -589,9 +589,5 @@
 				height: 2.75em;
 				line-height: 2.75em;
 			}
-
-				#header h1 {
-					padding: 0 0 0 1em;
-				}
 
 		}
