--- a/assets/css/gallery.css
+++ b/assets/css/gallery.css
@@ -465,15 +465,15 @@
 			border-left: solid 1px rgba(160, 160, 160, 0.3);
 			height: inherit;
 			line-height: inherit;
-			margin-left: 1.5em;
-			padding-left: 1.5em;
+			margin-left: 0.5%;
+			padding-left: 0.5%;
 		}
 
 			#header .links ul li {
 				border-left: solid 1px rgba(160, 160, 160, 0.3);
 				line-height: 1;
-				margin-left: 1em;
-				padding-left: 1em;
+				margin-left: 0.5%;
+				padding-left: 0.5%;
 			}
 
 				#header .links ul li:first-child {
