--- a/assets/css/main4.css
+++ b/assets/css/main4.css
@@ -988,14 +988,12 @@
 
 			#main {
 				padding: 4em 2em 2.5em 2em ;
-				height: 60%;
-				width: 60%;
-				margin-left: 20%;
 			}
 
-				#main .avatar:before {
-					left: -2em;
-					width: calc(100% + 4em);
+				#main .avatar {
+					height: 60%;
+					width: 60%;
+					margin-left: 20%;
 				}
 
 		}
@@ -1085,15 +1083,15 @@
 			border-left: solid 1px rgba(160, 160, 160, 0.3);
 			height: inherit;
 			line-height: inherit;
-			margin-left: 1.5em;
-			padding-left: 1.5em;
+			margin-left: 0.5%;
+			padding-left: 0.5%;
 		}
 
 			#header .links ul li {
 				border-left: solid 1px rgba(160, 160, 160, 0.3);
 				line-height: 1;
-				margin-left: 1em;
-				padding-left: 1em;
+				margin-left: 0.5%;
+				padding-left: 0.5%;
 			}
 
 				#header .links ul li:first-child {
@@ -1210,11 +1208,6 @@
 				height: 2.75em;
 				line-height: 2.75em;
 			}
-
-				#header h1 {
-					padding: 0 0 0 1em;
-				}
-
 
 		}
 
