--- a/assets/css/secondary.css
+++ b/assets/css/secondary.css
@@ -230,8 +230,12 @@
 		width: 100%;
 	}
 	h5 {
-		font-size: 1em;
-	}
+		font-size: 1.75em;
+		line-height: 1em;
+		height: 1em;
+		align: left;
+		width: 100%;
+		text-transform: none;	}
 
 	h6 {
 		font-size: 1.25em;
@@ -997,8 +1001,8 @@
 		@media screen and (max-width: 768px) {
 
 			#main {
-				padding: 4em 2em 2.5em 2em ;
-				width: 100%;
+				padding: 4em 1em 2.5em 1em ;
+				width: 80%;
 			}
 
 				#main .avatar:before {
@@ -1114,15 +1118,15 @@
 			border-left: solid 1px rgba(160, 160, 160, 0.3);
 			height: inherit;
 			line-height: inherit;
-			margin-left: 1.5em;
-			padding-left: 1.5em;
+			margin-left: 0.5%;
+			padding-left: 0.5%;
 		}
 
 			#header .links ul li {
 				border-left: solid 1px rgba(160, 160, 160, 0.3);
 				line-height: 1;
-				margin-left: 1em;
-				padding-left: 1em;
+				margin-left: 0.5%;
+				padding-left: 0.5%;
 			}
 
 				#header .links ul li:first-child {
@@ -1239,10 +1243,6 @@
 				height: 2.75em;
 				line-height: 2.75em;
 			}
-
-				#header h1 {
-					padding: 0 0 0 1em;
-				}
 
 		}
 
