--- a/assets/css/main4.css
+++ b/assets/css/main4.css
@@ -255,9 +255,9 @@
 	}
 
 	h6 {
-		font-size: 1.25em;
+		font-size: 1em;
 		text-transform: none;
-		color: #ffffff;
+		color: rgba(255, 255, 255, 0.75);
 	}
 	
 	@media screen and (max-width:768px) {
@@ -991,9 +991,9 @@
 			}
 
 				#main .avatar {
-					height: 60%;
-					width: 60%;
-					margin-left: 20%;
+					height: 40%;
+					width: 40%;
+					margin-left: 30%;
 				}
 
 		}
@@ -1083,15 +1083,15 @@
 			border-left: solid 1px rgba(160, 160, 160, 0.3);
 			height: inherit;
 			line-height: inherit;
-			margin-left: 0.5%;
-			padding-left: 0.5%;
+			margin-left: 1em;
+			padding-left: 1em;
 		}
 
 			#header .links ul li {
 				border-left: solid 1px rgba(160, 160, 160, 0.3);
 				line-height: 1;
-				margin-left: 0.5%;
-				padding-left: 0.5%;
+				margin-left: 1em;
+				padding-left: 1em;
 			}
 
 				#header .links ul li:first-child {
@@ -1208,6 +1208,26 @@
 				height: 2.75em;
 				line-height: 2.75em;
 			}
+			
+				#header .links {
+					-moz-flex: 1;
+					-webkit-flex: 1;
+					-ms-flex: 1;
+					flex: 1;
+					border-left: solid 1px rgba(160, 160, 160, 0.3);
+					height: inherit;
+					line-height: inherit;
+					margin-left: 1%;
+					padding-left: 1%;
+				}
+
+					#header .links ul li {
+						border-left: solid 1px rgba(160, 160, 160, 0.3);
+						line-height: 1;
+						margin-left: 1%;
+						padding-left: 1%;
+					}
+
 
 		}
 
