--- a/assets/css/secondary.css
+++ b/assets/css/secondary.css
@@ -1118,15 +1118,15 @@
 			border-left: solid 1px rgba(160, 160, 160, 0.3);
 			height: inherit;
 			line-height: inherit;
-			margin-left: 0.5%;
-			padding-left: 0.5%;
+			margin-left: 1em;
+			padding-left: 1em;
 		}
 
 			#header .links ul li {
 				border-left: solid 1px rgba(160, 160, 160, 0.3);
 				line-height: 1;
-				margin-left: 0.5%;
-				padding-left: 0.5%;
+				margin-left: 1em;
+				padding-left: 1em;
 			}
 
 				#header .links ul li:first-child {
@@ -1243,6 +1243,24 @@
 				height: 2.75em;
 				line-height: 2.75em;
 			}
+				#header .links {
+					-moz-flex: 1;
+					-webkit-flex: 1;
+					-ms-flex: 1;
+					flex: 1;
+					border-left: solid 1px rgba(160, 160, 160, 0.3);
+					height: inherit;
+					line-height: inherit;
+					margin-left: 1%;
+					padding-left: 1%;
+				}
+
+					#header .links ul li {
+						border-left: solid 1px rgba(160, 160, 160, 0.3);
+						line-height: 1;
+						margin-left: 1%;
+						padding-left: 1%;
+					}
 
 		}
 
