--- a/assets/css/gallery.css
+++ b/assets/css/gallery.css
@@ -226,19 +226,21 @@
 	@media screen and (max-width: 768px) {
 
 		h1 {
-			font-size: 1em;
+			font-size: 1.65em;
 			text-align: center;
 			vertical-align: center;
-			text-transform: uppercase;
+			text-transform: none;
 			font-weight: bolder;
 			font-family: Arial;
 			width: 100%;
 		}
 
 		h2 {
-			font-size: 0.75em;
-			align: left;
+			font-size: 1.25em;
+			font-weight: bold;
+			text-transform: none;
 			width: 100%;
+			color: #424c54;
 		}
 
 		h3 {
@@ -265,6 +267,12 @@
 			font-size: 0.75em;
 			text-transform: none;
 			color: #ffffff;
+		}
+		
+		p {
+			margin: 0 0 1 0;
+			color: #252525;
+			font-size: 0.75em;
 		}
 
 	}
