--- a/assets/css/main4.css
+++ b/assets/css/main4.css
@@ -987,14 +987,44 @@
 		@media screen and (max-width: 768px) {
 
 			#main {
+				-moz-transform-origin: 50% 50%;
+				-webkit-transform-origin: 50% 50%;
+				-ms-transform-origin: 50% 50%;
+				transform-origin: 50% 50%;
+				-moz-transform: rotateX(0deg);
+				-webkit-transform: rotateX(0deg);
+				-ms-transform: rotateX(0deg);
+				transform: rotateX(0deg);
+				-moz-transition: opacity 1s ease, -moz-transform 1s ease;
+				-webkit-transition: opacity 1s ease, -webkit-transform 1s ease;
+				-ms-transition: opacity 1s ease, -ms-transform 1s ease;
+				transition: opacity 1s ease, transform 1s ease;
+				background: transparent;
+				border-radius: 0;
+				cursor: default;
+				max-width: 100%;
+				opacity: 0.95;
+				position: fixed;
+				text-align: center;
+				width: 100%;
 				padding: 4em 2em 2.5em 2em ;
+				margin: auto;
 			}
 
 				#main .avatar {
-					height: 40%;
-					width: 40%;
-					margin-left: 30%;
+					position: relative;
+					display: block;
+					margin-top: 0.5em;
+					margin-left: 25%;
+					max-width: 50%;
 				}
+
+					#main .avatar img {
+					display: block;
+					margin: auto;
+					border-radius: 100%;
+					box-shadow: 0 0 0 0 #ebfafa;
+					}
 
 		}
 
