--- a/assets/css/secondary.css
+++ b/assets/css/secondary.css
@@ -231,8 +231,6 @@
 	}
 	h5 {
 		font-size: 1.75em;
-		line-height: 1em;
-		height: 1em;
 		align: left;
 		width: 100%;
 		text-transform: none;	}
@@ -1001,7 +999,7 @@
 		@media screen and (max-width: 768px) {
 
 			#main {
-				margin: 4em 1em 2.5em 1em;
+				margin: auto;
 				padding: 4em 1em 2.5em 1em;
 				width: 100%;
 			}
