--- a/assets/css/main4.css
+++ b/assets/css/main4.css
@@ -958,7 +958,7 @@
 		margin-top: 4em;
 		padding-top: 0.5em;
 		top: 1%;
-		height: 100%;
+		height: calc(100% - 11em);
 	}
 
 		#main .avatar {
@@ -1025,6 +1025,7 @@
 		bottom: 0;
 		position: fixed;
 		padding-bottom: 0.25em;
+                height: 7em;
 	}
 
 		#footer .copyright {
