--- a/assets/css/main4.css
+++ b/assets/css/main4.css
@@ -974,7 +974,8 @@
 				margin: auto;
 				border-radius: 50%;
 				box-shadow: 0 0 0 0 #ebfafa;
-				
+                                width:auto; 
+                                height:auto;				
 			}
 
 		@media screen and (max-width: 768px) {
