--- a/assets/css/main4.css
+++ b/assets/css/main4.css
@@ -970,7 +970,8 @@
 
 			#main .avatar img {
 				display: block;
-				max-width: 80%;
+     				max-width: 400px;
+                                max-height: 400px;
 				margin: auto;
 				border-radius: 50%;
 				box-shadow: 0 0 0 0 #ebfafa;
