--- a/assets/css/main4.css
+++ b/assets/css/main4.css
@@ -955,10 +955,12 @@
 		position: fixed;
 		text-align: center;
 		width: 100%;
-		margin-top: 4em;
-		padding-top: 0.5em;
+		margin: 4em 0em 0em ;
+		padding: 0;
 		top: 1%;
 		height: calc(100% - 11em);
+		box-sizing: border-box;
+		border: 2em solid #fff0;
 	}
 
 		#main .avatar {
@@ -995,7 +997,6 @@
 			}
 
 				#main .avatar {
-					position: fixed;
 					width: 100%;
 					margin: auto;
 					display: block;
@@ -1004,9 +1005,11 @@
 					#main .avatar img {
 					display: block;
 					margin: auto;
-					border-radius: 100%;
-					max-width: 80%;
-					max-height: 80%;
+					border-radius: 50%;
+					max-width: 40vh;
+					max-height: 40vh;
+					width: auto;
+					height:auto;
 					box-shadow: 0 0 0 0 #ebfafa;
 					}
 
