--- a/assets/css/main4.css
+++ b/assets/css/main4.css
@@ -955,12 +955,13 @@
 		position: fixed;
 		text-align: center;
 		width: 100%;
-		margin: 4em 0em 0em ;
+		margin: 40pt 0pt 70pt;
 		padding: 0;
 		top: 1%;
 		height: calc(100% - 11em);
 		box-sizing: border-box;
 		border: 2em solid #fff0;
+		font-size: 8pt;
 	}
 
 		#main .avatar {
@@ -972,13 +973,10 @@
 
 			#main .avatar img {
 				display: block;
-     				max-width: 400px;
-                                max-height: 400px;
 				margin: auto;
 				border-radius: 50%;
 				box-shadow: 0 0 0 0 #ebfafa;
-                                width:auto; 
-                                height:auto;				
+	
 			}
 
 		@media screen and (max-width: 768px) {
@@ -1064,8 +1062,8 @@
 		border-bottom: solid 1px rgba(160, 160, 160, 0.3);
 		width: 100%;
 		top: 0;
-		height: 4em;
-		line-height: 4em;
+		height: 40pt;
+		line-height: 3em;
 		z-index: 10000;
 		position: fixed;
 	}
