--- a/assets/css/main4.css
+++ b/assets/css/main4.css
@@ -955,10 +955,13 @@
 		position: fixed;
 		text-align: center;
 		width: 100%;
-		margin-top: 4em;
-		padding-top: 0.5em;
+		margin: 40pt 0pt 70pt;
+		padding: 0;
 		top: 1%;
-		height: 100%;
+		height: calc(100% - 11em);
+		box-sizing: border-box;
+		border: 2em solid #fff0;
+		font-size: 8pt;
 	}
 
 		#main .avatar {
@@ -970,11 +973,10 @@
 
 			#main .avatar img {
 				display: block;
-				max-width: 80%;
 				margin: auto;
 				border-radius: 50%;
 				box-shadow: 0 0 0 0 #ebfafa;
-				
+	
 			}
 
 		@media screen and (max-width: 768px) {
@@ -993,7 +995,6 @@
 			}
 
 				#main .avatar {
-					position: fixed;
 					width: 100%;
 					margin: auto;
 					display: block;
@@ -1003,8 +1004,10 @@
 					display: block;
 					margin: auto;
 					border-radius: 50%;
-					max-width: 80%;
-					max-height: 80%;
+					max-width: 40vh;
+					max-height: 40vh;
+					width: auto;
+					height:auto;
 					box-shadow: 0 0 0 0 #ebfafa;
 					}
 
@@ -1025,6 +1028,7 @@
 		bottom: 0;
 		position: fixed;
 		padding-bottom: 0.25em;
+                height: 7em;
 	}
 
 		#footer .copyright {
@@ -1058,8 +1062,8 @@
 		border-bottom: solid 1px rgba(160, 160, 160, 0.3);
 		width: 100%;
 		top: 0;
-		height: 4em;
-		line-height: 4em;
+		height: 40pt;
+		line-height: 3em;
 		z-index: 10000;
 		position: fixed;
 	}
