--- a/assets/css/vitae.css
+++ b/assets/css/vitae.css
@@ -131,7 +131,7 @@
 		font-size: 14pt;
 		font-weight: 350;
 		line-height: 2;
-		letter-spacing: 0.2em;
+#		letter-spacing: 0.2em;
 	}
 
 		@media screen and (max-width: 1680px) {
@@ -215,7 +215,7 @@
 	}
 
 	h3 {
-		font-size: 1.75em;
+		font-size: 25px;
 		text-align: center;
 		vertical-align: center;
 		text-transform: uppercase;
